# psycho-test

./: .gitignore  README.md  characters.ipynb  download_data.sh  graph.ipynb  graph_embedding.ipynb  main.py  model.pkl  personality_statements.csv  pyproject.toml  quiz.ipynb  small_model.pkl
data/: characters_works.csv
quiz_app/: __main__.py  gui.py  main.py  quiz_logic.py
